<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/myTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Tasks"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <Button
        android:id="@+id/addTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:text="Add Task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myTasks" />

    <Button
        android:id="@+id/allTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:text="All Tasks"
        app:layout_constraintBottom_toBottomOf="@+id/addTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addTask"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/userProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="User Profile"
        app:layout_constraintBottom_toBottomOf="@+id/myTasks"
        app:layout_constraintStart_toEndOf="@+id/myTasks"
        app:layout_constraintTop_toTopOf="@+id/myTasks"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/usernameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="@+id/userProfileButton"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/myTasks"
        app:layout_constraintTop_toBottomOf="@+id/addTask" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskListView2"
        android:layout_width="191dp"
        android:layout_height="214dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myTasks" />

    <Button
        android:id="@+id/signupButtonLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:text="Signup"
        app:layout_constraintEnd_toEndOf="@+id/addTask"
        app:layout_constraintTop_toBottomOf="@+id/addTask" />

    <TextView
        android:id="@+id/userEmailDisplay"
        android:layout_width="261dp"
        android:layout_height="37dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLoginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="@+id/signupButtonLink"
        app:layout_constraintStart_toStartOf="@+id/allTasks"
        app:layout_constraintTop_toBottomOf="@+id/allTasks"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="113dp"
        android:layout_height="51dp"
        android:text="Logout"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/buttonLoginLink"
        app:layout_constraintEnd_toEndOf="@+id/allTasks"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/buttonLoginLink"
        app:layout_constraintTop_toTopOf="@+id/buttonLoginLink"
        app:layout_constraintVertical_bias="1.0" />



</androidx.constraintlayout.widget.ConstraintLayout>